krita/image/tiles3/kis_tiled_data_manager.cc
@@ -297,6 +297,8 @@ void KisTiledDataManager::purge(const QRect& area)
     foreach(KisTileSP tile, tilesToDelete) {
         m_hashTable->deleteTile(tile);
     }
+
+    recalculateExtent();
 }
 
 quint8* KisTiledDataManager::duplicatePixel(qint32 num, const quint8 *pixel)
